feat: Implement core application structure including user, doctor, specialty, health unit management, and geocoding services.